ScheduledProviderServiceAdded
